<?xml version="1.0"?>
<package format="2">
  <name>deeplabv3plus_ros</name>
  <version>1.0.0</version>
  <description>The ROS Package of DeeplabV3+ for Segmentation</description>

  <maintainer email="o.masahiro0328@gmail.com">Masahiro Obuchi</maintainer>
  
  <author email="o.masahiro0328@gmail.com">Masahiro Obuchi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
